# Me-TV

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  bintray_descriptor.json  meson.build
data/: me-tv.desktop  me-tv.desktop.in  uk.org.winder.me-tv.desktop  uk.org.winder.me-tv.metainfo.xml  uk.org.winder.me-tv.yaml
doc/: me-tv.1
scripts/: cargo.sh  dist-vendor.sh
src/: about.rs  adaptor_notify_daemon.rs  channel_names.rs  channels_data.rs  comboboxtext_extras.rs  control_window.rs  control_window_button.rs  dialogs.rs  dvb.rs  epg_event.rs  epg_manager.rs  frontend_manager.rs  frontend_window.rs  gstreamer_engine.rs  inotify_daemon.rs  input_event_codes.rs  main.rs  metvcombobox.rs  metvcomboboxtext.rs  notify_daemon.rs  preferences.rs  preferences_dialog.rs  remote_control.rs  remote_control_notify_daemon.rs  transmitter_dialog.rs
src/resources/: application_menu.xml  control_window_menu.xml  frontend_window.glade.xml  frontend_window_control_toolbar.glade.xml  frontend_window_fullscreen_toolbar.glade.xml  frontend_window_menu.xml  preferences_dialog.glade.xml
src/resources/images/: me-tv.xpm
