[package]
name = "me-tv"
version = "3.1.0"
authors = ["Russel Winder <russel@winder.org.uk>"]
categories = ["desktop applications"]
keywords = ["dvb", "video", "audio", "player", "atsc"]
license = "GPL-3.0"
description = "Me TV is a GTK+/GStreamer desktop application for playing DVB, digital video broadcasting."
readme = "README.md"
edition = "2018"

[dependencies]
chrono = "*"
clap = "*"
ctrlc = {version = "*", features = ["termination"]}
exitcode = "*"
fragile = "*"
gdk = "*"
#gdk = {git="https://github.com/gtk-rs/gdk"}
gdk-pixbuf = "*"
#gdk-pixbuf = {git="https://github.com/gtk-rs/gdk-pixbuf"}
gio = {version="*", features=["v2_56"]}
#gio = {git="https://github.com/gtk-rs/gio", features=["v2_56"]}
glib = {version="*", features=["v2_56"]}
#glib = {git="https://github.com/gtk-rs/glib", features=["v2_56"]}
glob = "*"
gtk = {version="*", features=["v3_22"]}
#gtk = {git="https://github.com/gtk-rs/gtk", features=["v3_22"]}
gst = {package="gstreamer", version = "*", features = ["v1_16"]}
#gst = {package="gstreamer", git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features=["v1_16"]}
#gst-mpegts = {package="gstreamer", version="*"}
gst-mpegts = {package="gstreamer-mpegts", git="https://gitlab.com/Russel/gstreamer_mpegts.git"}
#gst-mpegts = {package="gstreamer-mpegts", path="../../Masters/Public/GStreamer_MPEGTS"}
lazy_static = "*"
libc = "*"
nix = "*"
notify = "*"
percent-encoding = "*"
regex= "*"
serde = "*"
serde_derive = "*"
serde_yaml = "*"
tempfile = "*"
time = "0.1.*"  # chrono 0.4.11 requires time 0.1.39, not 0.2.*
xdg = "*"

[dev-dependencies]
quickcheck = "*"
rstest = "*"
