[package]
name = "me-tv"
version = "3.1.1"
authors = ["Russel Winder <russel@winder.org.uk>"]
categories = ["desktop applications"]
keywords = ["dvb", "video", "audio", "player", "atsc"]
license = "GPL-3.0"
description = "Me TV is a GTK+/GStreamer desktop application for playing DVB, digital video broadcasting."
readme = "README.md"
edition = "2018"

[dependencies]
chrono = "*"
clap = "*"
ctrlc = {version = "*", features = ["termination"]}
exitcode = "*"
fragile = "*"
#
#gdk = "*"
#gdk-pixbuf = "*"
#gio = version="*"
#glib = version="*"
#gtk = version="*"
gdk = {git="https://github.com/gtk-rs/gtk-rs"}
gdk-pixbuf = {git="https://github.com/gtk-rs/gtk-rs"}
gio = {git="https://github.com/gtk-rs/gtk-rs"}
glib = {git="https://github.com/gtk-rs/gtk-rs"}
gtk = {git="https://github.com/gtk-rs/gtk-rs", features=["v3_16"]}  # GLArea requires this version or later.
#
#gst = {package="gstreamer", version = "*", features = ["v1_16"]}
#gst-mpegts = {package="gstreamer-mpegts", version="*", features = ["v1_16"]}
#gst = {package="gstreamer", git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_16"]}
#gst-mpegts = {package="gstreamer-mpegts", git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_16"]}
gst = {package="gstreamer", git="https://gitlab.freedesktop.org/Russel/gstreamer-rs", branch="mpegts_addition", features = ["v1_16"]}
gst-mpegts = {package="gstreamer-mpegts", git="https://gitlab.freedesktop.org/Russel/gstreamer-rs", branch="mpegts_addition", features = ["v1_16"]}
#
glob = "*"
lazy_static = "*"
libc = "*"
nix = "*"
notify = "*"
percent-encoding = "*"
regex= "*"
rust-ini= "*"
serde = "*"  # Not used explicitly yet must be listed explicitly.
serde_derive = "*"
serde_yaml = "*"
tempfile = "*"
time = "0.1"  # chrono 0.4.19 requires time 0.1.43, not 0.2.*
xdg = "*"

[dev-dependencies]
quickcheck = "*"
rstest = "*"
